# inferschema

./: README.md  pyproject.toml
inferschema/: main.py  schema_gen.py
snap/: snapcraft.yaml
