[tool.poetry]
name = "inferschema"
version = "0.1.0"
description = "infer schema of provided file via Spark's df"
authors = ["muqtadir"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyspark = "^3.5.0"
typer = "^0.9.0"
fastavro = "^1.9.2"
rich = "^13.7.0"
textract = "^1.6.5"

[tool.poetry.scripts]
inferschema = "inferschema.main:app"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
forced_separate =["inferschema"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
order_by_type = true
lines_between_types = 1
force_sort_within_sections = false

ignore_errors = true
show_missing = true
precision = 2
skip_covered = false
